# voicectrl-ableton

./: .gitignore  LICENSE  README.md  VoiceCtrl.js  build_amxd.py  package.json  run.sh
device/: VoiceCtrl.amxd  VoiceCtrl.maxpat
helper/: ableton.py  llm.py  main.py  pyproject.toml  stt.py  tools.py
plugin/: CMakeLists.txt
plugin/Source/: AbletonClient.cpp  AbletonClient.h  Pipeline.cpp  Pipeline.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/: config.js  index.js  logger.js  pipeline.js  server.js
src/services/: ableton.js  ollama.js  whisper.js
web/: debug.html  index.html
